feat: recommendations routes
