# docs/swagger.json
@@ -248,11 +248,55 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/schemas.SubmitAnswerRequest"
                             }
                         }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.MessageJsonResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete student questionnare answer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Questionnare",
+                    "Student"
+                ],
+                "summary": "Delete student questionnare answer",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -550,6 +594,243 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/schemas.QuestionnareStatusResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/recommendations": {
+            "get": {
+                "description": "Get all students recommendations",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Recommendations",
+                    "Admin"
+                ],
+                "summary": "Get all students recommendations",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httputil.DataJsonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/schemas.StudentRecommendation"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete recommendation for a student",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Recommendations",
+                    "Admin"
+                ],
+                "summary": "Delete recommendation for a student",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Delete student recommendation request body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schemas.DeleteRecommendationRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.MessageJsonResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/recommendations/student": {
+            "get": {
+                "description": "Get recommendations for a student",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Recommendations",
+                    "Student"
+                ],
+                "summary": "Get recommendations for a student",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httputil.DataJsonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/schemas.Recommendation"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/recommendations/student/{studentId}": {
+            "get": {
+                "description": "Get student recommendations details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Recommendations",
+                    "Admin"
+                ],
+                "summary": "Get student recommendations details",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Id student",
+                        "name": "studentId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httputil.DataJsonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/schemas.Recommendation"
                                         }
                                     }
                                 }
@@ -1143,6 +1424,17 @@
                 }
             }
         },
+        "schemas.AhpRecommendation": {
+            "type": "object",
+            "properties": {
+                "consistency_ratio": {
+                    "type": "number"
+                },
+                "result": {
+                    "$ref": "#/definitions/schemas.RecommendationResult"
+                }
+            }
+        },
         "schemas.Alternative": {
             "type": "object",
             "properties": {
@@ -1154,6 +1446,14 @@
                 },
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "schemas.DeleteRecommendationRequest": {
+            "type": "object",
+            "properties": {
+                "student_id": {
+                    "type": "string"
                 }
             }
         },
@@ -1273,6 +1573,34 @@
                 }
             }
         },
+        "schemas.Recommendation": {
+            "type": "object",
+            "properties": {
+                "ahp": {
+                    "$ref": "#/definitions/schemas.AhpRecommendation"
+                },
+                "topsis": {
+                    "$ref": "#/definitions/schemas.TopsisRecommendation"
+                }
+            }
+        },
+        "schemas.RecommendationResult": {
+            "type": "object",
+            "properties": {
+                "alternative": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "score": {
+                    "type": "number"
+                }
+            }
+        },
         "schemas.School": {
             "type": "object",
             "properties": {
@@ -1347,6 +1675,60 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "schemas.StudentRecommendation": {
+            "type": "object",
+            "properties": {
+                "ahp_results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.RecommendationResult"
+                    }
+                },
+                "consistency_ratio": {
+                    "type": "number"
+                },
+                "fullname": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "nisn": {
+                    "type": "string"
+                },
+                "topsis_results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.RecommendationResult"
+                    }
+                }
+            }
+        },
+        "schemas.SubmitAnswerRequest": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "number": {
+                    "type": "integer"
+                }
+            }
+        },
+        "schemas.TopsisRecommendation": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "result": {
+                    "$ref": "#/definitions/schemas.RecommendationResult"
                 }
             }
         },
