# internal/api/services/ahp.go
@@ -6,12 +6,11 @@ import (
 	"net/http"
 
 	"github.com/albugowy15/api-double-track/internal/pkg/ahp"
-	"github.com/albugowy15/api-double-track/internal/pkg/db"
 	"github.com/albugowy15/api-double-track/internal/pkg/models"
 	"github.com/albugowy15/api-double-track/internal/pkg/repositories"
 	"github.com/albugowy15/api-double-track/internal/pkg/utils/httputil"
 	"github.com/albugowy15/api-double-track/internal/pkg/utils/jwt"
-	"github.com/guregu/null/v5"
+	"github.com/jmoiron/sqlx"
 )
 
 type AHPServiceError struct {
@@ -23,7 +22,20 @@ func (e *AHPServiceError) Error() string {
 	return e.Err.Error()
 }
 
-func CalculateAHP(r *http.Request, body []models.SubmitAnswerRequest) error {
+// this allSubCriteriaWeights will be initialized inside main function
+var allSubCriteriaWeights = [ahp.TotalCriteria][ahp.TotalSubCriteria]float32{}
+
+func InitSubCriteriaWeights() {
+	for i := 0; i < ahp.TotalCriteria; i++ {
+		subMpc := ahp.BuildSubMPC()
+		subColSum := ahp.CalculateSubColSum(subMpc)
+		subNormMpc := ahp.NormalizeSubMPC(subMpc, subColSum)
+		subCriteriwaWeight := ahp.CalculateSubCriteriaWeight(subNormMpc)
+		allSubCriteriaWeights[i] = subCriteriwaWeight
+	}
+}
+
+func CalculateAHP(r *http.Request, body []models.SubmitAnswerRequest, tx *sqlx.Tx) error {
 	mpc := ahp.BuildCriteriaMPC(body)
 	colSum := ahp.CalculateColSum(mpc)
 	normMpc := ahp.NormalizeMPC(mpc, colSum)
@@ -33,14 +45,6 @@ func CalculateAHP(r *http.Request, body []models.SubmitAnswerRequest) error {
 	consistencyIndex := ahp.ConsistencyIndex(lambdaMax)
 	consistencyRatio := ahp.ConsistencyRatio(consistencyIndex)
 	log.Printf("is consistent: %v", ahp.IsAnswerConsistent(consistencyRatio))
-	allSubCriteria := [ahp.TotalCriteria][ahp.TotalSubCriteria]float32{}
-	for i := 0; i < ahp.TotalCriteria; i++ {
-		subMpc := ahp.BuildSubMPC()
-		subColSum := ahp.CalculateSubColSum(subMpc)
-		subNormMpc := ahp.NormalizeSubMPC(subMpc, subColSum)
-		subCriteriwaWeight := ahp.CalculateSubCriteriaWeight(subNormMpc)
-		allSubCriteria[i] = subCriteriwaWeight
-	}
 
 	schoolIdClaim, err := jwt.GetJwtClaim(r, "school_id")
 	if err != nil {
@@ -79,7 +83,7 @@ func CalculateAHP(r *http.Request, body []models.SubmitAnswerRequest) error {
 	for row := range ahp.TotalAlternative {
 		for col := range ahp.TotalCriteria {
 			subVecIdx := decisionMatrix[row][col] - 1
-			alternativeMatrix[row][col] = allSubCriteria[col][int(subVecIdx)] * criteriaWeight[col]
+			alternativeMatrix[row][col] = allSubCriteriaWeights[col][int(subVecIdx)] * criteriaWeight[col]
 		}
 		alternativeHpt = append(alternativeHpt, ahp.SumRow(alternativeMatrix[row]))
 	}
@@ -87,18 +91,9 @@ func CalculateAHP(r *http.Request, body []models.SubmitAnswerRequest) error {
 	// save ahp
 	studentIdClaim, _ := jwt.GetJwtClaim(r, "user_id")
 	studentId := studentIdClaim.(string)
-	tx, err := db.GetDb().Beginx()
-	if err != nil {
-		log.Println(err)
-		return &AHPServiceError{
-			StatusCode: http.StatusInternalServerError,
-			Err:        httputil.ErrInternalServer,
-		}
-	}
 	a := repositories.GetAHPRepository()
-	insertedId, err := a.SaveAHPTx(models.AHP{StudentId: studentId, ConsistencyIndex: consistencyIndex}, tx)
+	insertedId, err := a.SaveAHPTx(models.AHP{StudentId: studentId, ConsistencyRatio: consistencyRatio}, tx)
 	if err != nil {
-		tx.Rollback()
 		return &AHPServiceError{
 			StatusCode: http.StatusInternalServerError,
 			Err:        httputil.ErrInternalServer,
@@ -108,7 +103,6 @@ func CalculateAHP(r *http.Request, body []models.SubmitAnswerRequest) error {
 	alt := repositories.GetAlternativeRepository()
 	alternatives, err := alt.GetAlternatives()
 	if err != nil {
-		tx.Rollback()
 		return &AHPServiceError{
 			StatusCode: http.StatusInternalServerError,
 			Err:        httputil.ErrInternalServer,
@@ -119,7 +113,6 @@ func CalculateAHP(r *http.Request, body []models.SubmitAnswerRequest) error {
 	for _, alternative := range alternatives {
 		hptIdx, ok := ahp.AlternativeToRow[alternative.Alternative]
 		if !ok {
-			tx.Rollback()
 			log.Printf("err %s is not valid index for AlternativeToRow\n", alternative.Alternative)
 			return &AHPServiceError{
 				StatusCode: http.StatusInternalServerError,
@@ -136,34 +129,6 @@ func CalculateAHP(r *http.Request, body []models.SubmitAnswerRequest) error {
 	}
 	err = a.SaveAHPAlternativesTx(ahpAlternatives, tx)
 	if err != nil {
-		tx.Rollback()
-		return &AHPServiceError{
-			StatusCode: http.StatusInternalServerError,
-			Err:        httputil.ErrInternalServer,
-		}
-	}
-
-	answers := []models.Answer{}
-	for _, item := range body {
-		answer := models.Answer{
-			StudentId:  studentId,
-			QuestionId: item.Id,
-			Answer:     null.StringFrom(item.Answer),
-		}
-		answers = append(answers, answer)
-	}
-	err = repositories.GetAnswersRepository().SaveAnswersTx(answers, tx)
-	if err != nil {
-		tx.Rollback()
-		return &AHPServiceError{
-			StatusCode: http.StatusInternalServerError,
-			Err:        httputil.ErrInternalServer,
-		}
-	}
-
-	err = tx.Commit()
-	if err != nil {
-		log.Println("err commit transactions:", err)
 		return &AHPServiceError{
 			StatusCode: http.StatusInternalServerError,
 			Err:        httputil.ErrInternalServer,
