# internal/pkg/schemas/recommendations.go
@@ -2,14 +2,14 @@ package schemas
 
 type RecommendationResult struct {
 	Alternative string  `json:"alternative"`
+	Description string  `json:"description"`
 	Score       float32 `json:"score"`
 	Id          int32   `json:"id"`
 }
 
 type AhpRecommendation struct {
 	Result           RecommendationResult `json:"result"`
-	ConsistencyIndex float32              `json:"consistency_index"`
-	Id               int32                `json:"id"`
+	ConsistencyRatio float32              `json:"consistency_ratio"`
 }
 
 type TopsisRecommendation struct {
@@ -18,9 +18,19 @@ type TopsisRecommendation struct {
 }
 
 type Recommendation struct {
-	StudentId       string               `json:"student_id"`
-	StudentFullname string               `json:"student_fullname"`
-	Consistency     string               `json:"consistency"`
-	Topsis          TopsisRecommendation `json:"topsis"`
-	Ahp             AhpRecommendation    `json:"ahp"`
+	Ahp    AhpRecommendation    `json:"ahp"`
+	Topsis TopsisRecommendation `json:"topsis"`
+}
+
+type StudentRecommendation struct {
+	Fullname         string                 `json:"fullname"`
+	Nisn             string                 `json:"nisn"`
+	AhpResults       []RecommendationResult `json:"ahp_results"`
+	TopsisResults    []RecommendationResult `json:"topsis_results"`
+	Id               int32                  `json:"id"`
+	ConsistencyRatio float32                `json:"consistency_ratio"`
+}
+
+type DeleteRecommendationRequest struct {
+	StudentId string `json:"student_id"`
 }
